--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <!-- Material UI CSS -->
     <link rel="stylesheet" href="https://unpkg.com/@mui/material@latest/dist/mui.min.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -78,6 +78,6 @@
     <!-- Material UI JavaScript -->
     <script src="https://unpkg.com/@mui/material@latest/dist/mui.min.js"></script>
     <!-- App JavaScript -->
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
